Attempt at fixing Album Year
Signed-off-by: Ishwara Coello Escobar <icoello@enxenio.es>